maybe fix for info on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -127,6 +127,7 @@ body {
   }
   @media screen and(max-width:612px) {
     width: 82%;
+    right: 1px;
     h2 {
       font-size: 26px;
     }
